used postgresql to put the csv into the db

--- a/merge.ipynb
+++ b/merge.ipynb
@@ -764,11 +764,166 @@
     "    unit_price DECIMAL(10,2) NOT NULL\n",
     ");\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Connected as: ('ontodb',)\n",
+      "PostgreSQL version: ('PostgreSQL 16.6 (Ubuntu 16.6-0ubuntu0.24.04.1) on x86_64-pc-linux-gnu, compiled by gcc (Ubuntu 13.2.0-23ubuntu4) 13.2.0, 64-bit',)\n"
+     ]
+    }
+   ],
+   "source": [
+    "import psycopg2\n",
+    "\n",
+    "conn = psycopg2.connect(\n",
+    "    host=\"localhost\",\n",
+    "    database=\"OntoDb\",\n",
+    "    user=\"ontodb\",\n",
+    "    password=\"admin\"\n",
+    ")\n",
+    "cursor = conn.cursor()\n",
+    "\n",
+    "cursor.execute(\"SELECT current_user;\")\n",
+    "print(\"Connected as:\", cursor.fetchone())\n",
+    "\n",
+    "cursor.execute(\"SELECT version();\")\n",
+    "print(\"PostgreSQL version:\", cursor.fetchone())\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS Product (\n",
+    "    product_id INT PRIMARY KEY,\n",
+    "    product_category VARCHAR(255) NOT NULL,  \n",
+    "    product_type VARCHAR(255),              \n",
+    "    product_detail VARCHAR(255),             \n",
+    "    unit_price DECIMAL(10,2) NOT NULL\n",
+    ");\n",
+    "\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS Store (\n",
+    "    store_id INT PRIMARY KEY,\n",
+    "    store_location VARCHAR(255)\n",
+    ");\n",
+    "\"\"\")\n",
+    "\n",
+    "cursor.execute(\"\"\"\n",
+    "CREATE TABLE IF NOT EXISTS Transactions (\n",
+    "    sale_id INT PRIMARY KEY,\n",
+    "    transaction_id INT,\n",
+    "    transaction_date DATE,\n",
+    "    transaction_time TIME,\n",
+    "    transaction_qty INT,\n",
+    "    store_id INT,\n",
+    "    product_id INT,\n",
+    "    FOREIGN KEY (store_id) REFERENCES Store(store_id),\n",
+    "    FOREIGN KEY (product_id) REFERENCES Product(product_id)\n",
+    ");\n",
+    "\"\"\")\n",
+    "\n",
+    "conn.commit()\n",
+    "cursor.close()\n",
+    "conn.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bakery Sales Data (first 5 rows):\n",
+      "(150040, '2021-01-02', '08:38', 1.0, 3, 'Astoria', 101, 0.9, 'Bakery', 'Bread', 'BAGUETTE', 1)\n",
+      "(150040, '2021-01-02', '08:38', 3.0, 3, 'Astoria', 102, 1.2, 'Bakery', 'Bread', 'PAIN AU CHOCOLAT', 2)\n",
+      "(150041, '2021-01-02', '09:14', 2.0, 5, 'Lower Manhattan', 102, 1.2, 'Bakery', 'Bread', 'PAIN AU CHOCOLAT', 3)\n",
+      "(150041, '2021-01-02', '09:14', 1.0, 5, 'Lower Manhattan', 103, 1.15, 'Bakery', 'Bread', 'PAIN', 4)\n",
+      "(150042, '2021-01-02', '09:25', 5.0, 3, 'Astoria', 104, 1.2, 'Bakery', 'Bread', 'TRADITIONAL BAGUETTE', 5)\n",
+      "\n",
+      "Coffee Shop Sales Data (first 5 rows):\n",
+      "(1, '2023-01-01', '07:06:11', 2, 5, 'Lower Manhattan', 32, 3.0, 'Coffee', 'Gourmet brewed coffee', 'Ethiopia Rg', 1)\n",
+      "(2, '2023-01-01', '07:08:56', 2, 5, 'Lower Manhattan', 57, 3.1, 'Tea', 'Brewed Chai tea', 'Spicy Eye Opener Chai Lg', 2)\n",
+      "(3, '2023-01-01', '07:14:04', 2, 5, 'Lower Manhattan', 59, 4.5, 'Drinking Chocolate', 'Hot chocolate', 'Dark chocolate Lg', 3)\n",
+      "(4, '2023-01-01', '07:20:24', 1, 5, 'Lower Manhattan', 22, 2.0, 'Coffee', 'Drip coffee', 'Our Old Time Diner Blend Sm', 4)\n",
+      "(5, '2023-01-01', '07:22:41', 2, 5, 'Lower Manhattan', 57, 3.1, 'Tea', 'Brewed Chai tea', 'Spicy Eye Opener Chai Lg', 5)\n"
+     ]
+    }
+   ],
+   "source": [
+    "#Followed online tutorial reference : https://www.geeksforgeeks.org/how-to-insert-a-pandas-dataframe-to-an-existing-postgresql-table/\n",
+    "\n",
+    "\n",
+    "Coffee_sales = pd.read_csv('Coffee_Shop_Sales.csv')\n",
+    "\n",
+    "# Write the bakery sales data into the database.\n",
+    "df.to_sql('bakery_sales_data', con=db, if_exists='replace', index=False)\n",
+    "\n",
+    "# Also add the Coffee_Shop_Sales.csv data into the database.\n",
+    "Coffee_sales.to_sql('coffee_sales_data', con=db, if_exists='replace', index=False)\n",
+    "\n",
+    "# Query and display 5 rows from the bakery sales table.\n",
+    "import psycopg2\n",
+    "\n",
+    "conn_db = psycopg2.connect(host=\"localhost\", database=\"OntoDb\", user=\"ontodb\", password=\"admin\")\n",
+    "conn_db.autocommit = True\n",
+    "cursor = conn_db.cursor()\n",
+    "\n",
+    "print(\"Bakery Sales Data (first 5 rows):\")\n",
+    "sql_query = \"SELECT * FROM bakery_sales_data LIMIT 5;\"\n",
+    "cursor.execute(sql_query)\n",
+    "for row in cursor.fetchall():\n",
+    "    print(row)\n",
+    "\n",
+    "print(\"\\nCoffee Shop Sales Data (first 5 rows):\")\n",
+    "sql_query_coffee = \"SELECT * FROM coffee_sales_data LIMIT 5;\"\n",
+    "cursor.execute(sql_query_coffee)\n",
+    "for row in cursor.fetchall():\n",
+    "    print(row)\n",
+    "\n",
+    "cursor.close()\n",
+    "conn_db.close()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Total rows in bakery sales: 234005\n",
+      "Total rows in Coffee sales: 149116\n"
+     ]
+    }
+   ],
+   "source": [
+    "from sqlalchemy import text\n",
+    "\n",
+    "with db.connect() as conn:\n",
+    "    count_query = text(\"SELECT COUNT(*) FROM bakery_sales_data;\")\n",
+    "    total_rows = conn.execute(count_query).scalar()\n",
+    "    print(f\"Total rows in bakery sales: {total_rows}\")\n",
+    "\n",
+    "with db.connect() as conn:\n",
+    "    count_query = text(\"SELECT COUNT(*) FROM coffee_sales_data;\")\n",
+    "    total_rows = conn.execute(count_query).scalar()\n",
+    "    print(\"Total rows in Coffee sales:\", total_rows)"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -782,7 +937,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.12.7"
+   "version": "3.9.20"
   }
  },
  "nbformat": 4,
